<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.fimatas.home</groupId>
	<artifactId>Home</artifactId>
	<version>DEV</version>
	<packaging>pom</packaging>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.12</version>
		<relativePath />
	</parent>
	
	<properties>
		<!-- Encoding -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- Java -->
		<java.version>17</java.version>
		<!-- Dependency versions -->
		<spring-boot.version>3.1.12</spring-boot.version>
		<files-api.version>3.0</files-api.version>
		<commons-io.version>2.8.0</commons-io.version>
		<commons-text.version>1.10.0</commons-text.version>
		<commons-collections4.version>4.4</commons-collections4.version>
		<pushy.version>0.15.2</pushy.version>
		<b2-sdk.version>3.1.0</b2-sdk.version>
		<!-- Webjars versions -->
		<webjars-locator.version>0.45</webjars-locator.version>
		<bootstrap.version>4.6.1</bootstrap.version>
		<jquery.version>3.6.4</jquery.version>
		<font-awesome.version>6.1.2</font-awesome.version>
		<soundar24-roundSlider.version>1.6.1-1</soundar24-roundSlider.version>
		<!-- Plugin versions -->
		<StaticResourceProcessing.version>1.5.3</StaticResourceProcessing.version>
		<lifecycle-mapping.version>1.0.0</lifecycle-mapping.version>
		<dependency-check-maven.version>7.0.4</dependency-check-maven.version>
		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
		<bouncycastle.version>1.70</bouncycastle.version>
		<commons-net.version>3.11.1</commons-net.version>
		<assertj.version>3.24.2</assertj.version>
		<hap-java.version>2.0.1</hap-java.version>
		<zxing.version>3.4.1</zxing.version>
		<heatpumpdriver.version>1.0.1</heatpumpdriver.version>
	</properties>

	<modules>
		<module>homelibrary</module>
		<module>homecontroller</module>
		<module>homeclient</module>
		<module>homeadapter</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>de.fimatas.files</groupId>
				<artifactId>files-api</artifactId>
				<version>${files-api.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-text</artifactId>
				<version>${commons-text.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>${commons-collections4.version}</version>
			</dependency>
			<dependency>
				<groupId>com.eatthepath</groupId>
				<artifactId>pushy</artifactId>
				<version>${pushy.version}</version>
			</dependency>
			<dependency>
				<groupId>com.backblaze.b2</groupId>
				<artifactId>b2-sdk-core</artifactId>
				<version>${b2-sdk.version}</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.backblaze.b2</groupId>
				<artifactId>b2-sdk-httpclient</artifactId>
				<version>${b2-sdk.version}</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.luckycatlabs</groupId>
				<artifactId>SunriseSunsetCalculator</artifactId>
				<version>1.2</version>
			</dependency>
			<dependency>
				<groupId>commons-net</groupId>
				<artifactId>commons-net</artifactId>
				<version>${commons-net.version}</version>
			</dependency>
			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>bootstrap</artifactId>
				<version>${bootstrap.version}</version>
			</dependency>
			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>jquery</artifactId>
				<version>${jquery.version}</version>
			</dependency>
			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>font-awesome</artifactId>
				<version>${font-awesome.version}</version>
			</dependency>
			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>webjars-locator</artifactId>
				<version>${webjars-locator.version}</version>
			</dependency>
			<dependency>
				<groupId>web</groupId>
				<artifactId>soundar24-roundSlider</artifactId>
				<version>${soundar24-roundSlider.version}</version>
			</dependency>
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>${assertj.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>de.fimatas</groupId>
				<artifactId>HeatpumpDriverInterface</artifactId>
				<version>${heatpumpdriver.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- Test -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
					<configuration>
						<release>${java.version}</release>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<version>${dependency-check-maven.version}</version>
			</plugin>
		</plugins>
	</build>

</project>